@@ -7,18 +7,18 @@ BUILT_MODULE_NAME[0]="i915_bpo"
 BUILT_MODULE_NAME[1]="intel_ips"
 BUILT_MODULE_NAME[2]="drm"
 BUILT_MODULE_NAME[3]="drm_kms_helper"
-BUILT_MODULE_NAME[4]="radeon"
-BUILT_MODULE_NAME[5]="ttm"
+#BUILT_MODULE_NAME[4]="radeon"
+#BUILT_MODULE_NAME[5]="ttm"
 BUILT_MODULE_LOCATION[0]="drivers/gpu/drm/i915"
 BUILT_MODULE_LOCATION[2]="drivers/gpu/drm/"
 BUILT_MODULE_LOCATION[3]="drivers/gpu/drm/"
-BUILT_MODULE_LOCATION[4]="drivers/gpu/drm/radeon"
-BUILT_MODULE_LOCATION[5]="drivers/gpu/drm/ttm"
+#BUILT_MODULE_LOCATION[4]="drivers/gpu/drm/radeon"
+#BUILT_MODULE_LOCATION[5]="drivers/gpu/drm/ttm"
 DEST_MODULE_LOCATION[0]=/updates
 DEST_MODULE_LOCATION[1]=/updates
 DEST_MODULE_LOCATION[2]=/updates
 DEST_MODULE_LOCATION[3]=/updates
-DEST_MODULE_LOCATION[4]=/updates
-DEST_MODULE_LOCATION[5]=/updates
+#DEST_MODULE_LOCATION[4]=/updates
+#DEST_MODULE_LOCATION[5]=/updates
 REMAKE_INITRD="Y"
 BUILD_EXCLUSIVE_KERNEL="^4.4.*"
