@@ -15,9 +15,9 @@ backport.patch
 48-Revert-drm-Pass-the-drm_dp_aux-hw_mutex-to-i2c-for-i.patch
 48-Revert-drm-edid-convert-to-use-match_string-helper.patch
 48-revert-u64-to-user-ptr.patch
-48-radeon-revert-switcheroo-changes.diff
-48-radeon-use-old-get_user_pages.diff
-48-Revert-drm-radeon-make-radeon_mn_get-wait-for-mmap_s.patch
+#48-radeon-revert-switcheroo-changes.diff
+#48-radeon-use-old-get_user_pages.diff
+#48-Revert-drm-radeon-make-radeon_mn_get-wait-for-mmap_s.patch
 #48-radeon-revert-ttm-api-change.patch
 48-revert-dma-buf-remove-range-based-flush.diff
 48-Revert-dma-buf-drm-ion-Propagate-error-code-from-dma.patch
@@ -27,6 +27,6 @@ rename-to-i915-bpo.diff
 use-bpo-io-mapping.diff
 SAUCE-i915_bpo-Add-i915_bpo_-calls-for-i915.patch
 drm-trim-build.diff
-48-ttm-revert-conversion-to-pfn-t.diff
-48-Revert-drm-radeon-fix-check-for-port-PM-availability.patch
-48-Revert-drm-radeon-fix-power-state-when-port-pm-is-un.patch
+#48-ttm-revert-conversion-to-pfn-t.diff
+#48-Revert-drm-radeon-fix-check-for-port-PM-availability.patch
+#48-Revert-drm-radeon-fix-power-state-when-port-pm-is-un.patch
