@@ -1,6 +1,7 @@
 i915-4.9-4.4 (4.9.41-1) UNRELEASED; urgency=medium
 
   * New version v4.9.41.
+  * Drop radeon module.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Mon, 04 Sep 2017 10:49:39 +0300
 
